fix assetindex overflow

--- a/src/assetindex/assetIndex.scss
+++ b/src/assetindex/assetIndex.scss
@@ -1,4 +1,7 @@
 .assetIndex {
+  .ui-dialog-title {
+    padding-right: 100px;
+  }
   .webtrader-dialog {
     width: auto !important;
   }
